yaml/10.cicd/1.jenkins-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  replicas: 1
  serviceName: jenkins
  selector:
    matchLabels:
      devops: jenkins-master
  template:
    metadata:
      labels:
        devops: jenkins-master
    spec:
      nodeSelector:
        jenkins: "true"
      serviceAccount: jenkins #Pod 需要使用的服务账号
      containers:
      - name: jenkins
        image: harbor.devops.cn:8090/library/blueocean:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http #Jenkins Master Web 服务端口
          containerPort: 8080
        - name: slavelistener #Jenkins Master 供未来 Slave 连接的端口
          containerPort: 50000
        volumeMounts:
        - name: jenkinshome
          mountPath: /var/jenkins_home
        securityContext:
          capabilities:
            add: ["SYS_RESOURCE"]
          #runAsUser: 0
          privileged: true
        #command: ["sh", "-c", "chown -R 1000:1000 /var/jenkins_home"]
      volumes:
      - name: jenkinshome
        hostPath:
          path: /mnt/jenkins_home/
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  #type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: slavelistener
    port: 50000
    targetPort: 50000
  selector:
    devops: jenkins-master
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-web
  namespace: jenkins
spec:
  rules:
    - host: jenkins.devops.cn
      http:
        paths:
        - backend:
            serviceName: jenkins
            servicePort: 8080
          path: /
