yaml/10.cicd/2.gitlab-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: gitlab
  namespace: jenkins
subsets:
- addresses:
  - ip: 192.168.101.12
  ports:
  - port: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: jenkins
spec:
  ports:
  - port: 9091
    targetPort: 9091
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-web
  namespace: jenkins
spec:
  rules:
    - host: git.devops.cn
      http:
        paths:
        - backend:
            serviceName: gitlab
            servicePort: 9091
          path: /
